[package]
name = "ocean"
version = "0.5.4"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.0", optional = true }

[features]
default = ["git"]
git = ["url"] # support for creating gitignores, submodules etc
